--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <p class="header">don't just test, show your tests</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/frankrowe/show/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/frankrowe/show/tarball/master">Download TAR</a></li>
+          <li class="download"><a class="buttons" href="http://frankrowe.github.io/show/show.js">show.js</a></li>
+          <li class="download"><a class="buttons" href="http://frankrowe.github.io/show/show.css">show.css</a></li>
           <li><a class="buttons github" href="https://github.com/frankrowe/show">View On GitHub</a></li>
         </ul>
 
@@ -36,7 +36,7 @@
 <p>minimal client js testing + reporting</p>
       </section>
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
